--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -22,6 +22,18 @@ user:
     invalid_src: "The item in off hand is not valid enchantment source."
     invalid_ench: "%s is not a valid enchantment name"
     invalid_level: "The level required is invalid"
+  launch:
+    usage: |
+      /nu launch <Yaw> <Pitch> <Speed> <Delay> [Player]
+      yaw: 0=+X 90=+Z 180=-X 270=-Z
+      pitch: 0=Horizon 90=+Y
+      speed: In what speed the player will be launched
+      delay: How many ticks to wait before opening the player's elytra. Usually 2
+      player: Can be @p in command block.
+    player_not_online: "Player %s is not online"
+    not_ready_to_fly: "You must have an elytra worn."
+    not_ready_to_fly_sender: "The player must have an elytra worn."
+    missing_name: "Player name required"
 
 manual:
   no_description: "No description"
@@ -42,3 +54,7 @@ manual:
   addenchsrc:
     description: "Register Item in hand as a valid enchant source"
     usage: "/nu addenchsrc"
+
+  launch:
+    description: "Launch player into sky"
+    usage: "/nu launch <Yaw> <Pitch> <Speed> <Delay> [Player]"
