--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -37,7 +37,12 @@ user:
     not_ready_to_fly: "You must have an elytra worn."
     not_ready_to_fly_sender: "The player must have an elytra worn."
     missing_name: "Player name required"
-
+  lp:
+    turned_off: "Loot protect turned off"
+    turned_on: "Loot protect turned on"
+    mode_OFF: "Loot protect has been turned off globally"
+    mode_MAX_DAMAGE: "Item will be given to the player who made most damages"
+    mode_FINAL_DAMAGE: "Item will be given to the player who made the last damage."
 manual:
   no_description: "No description"
   no_usage: "No usage"
@@ -61,3 +66,7 @@ manual:
   launch:
     description: "Launch player into sky"
     usage: "/nu launch <Yaw> <Pitch> <Speed> <Delay> [Player]"
+
+  lp:
+    description: "Toggle loot protect status"
+    usage: "/nu lp"
