--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -15,6 +15,7 @@ user:
     not_double: "Not a valid number"
     command_exception: "Internal server error. Unable to run command."
     bad_enum: "Not valid for enum type: %s. Values: %s"
+    no_required_permission: "You do not have the required permission: %s"
   showitem:
     message: "Player %s show item: &r{itemName}&r * {amount}"
   enchant:
