--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -133,7 +133,9 @@ user:
     mailbox_no_space: "Player %s wants to send you a package but your mailbox don't have enough space to hold."
     mail_sent: "You've sent a package to %s and been charged %.2f for fee."
     mail_received: "Player %s sent you a package and is put into your mailbox."
-
+    now_right_click_send: "Now right click the box you want to sent to %s"
+    chest_protected: "You cannot send this chest because it's protected."
+    mail_sent_nothing: "The postman is kind, not charging any fee for an empty box."
 manual:
   no_description: "No description"
   no_usage: "No usage"
