--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -231,6 +231,10 @@ user:
     finish_1: "time to checkpoint %d [ %d min %.2fs ]"
     finish_2: "time total [ %d min %.2fs ]"
     list: "timers: %d"
+  teleport:
+    ok: "You spend %.2f this time to %s"
+    not_set_yet: "You has not set a home"
+    money_insufficient: "You don't have enough money(%.2f) to use this command"
 manual:
   no_description: "No description"
   no_usage: "No usage"
