--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -288,6 +288,10 @@ user:
     notification:
       public: "Realm: %s"
       private: "Realm: %s Owner: %s"
+      public_title: "Realm: %s"
+      public_subtitle: "Public"
+      private_title: "Realm: %s"
+      private_subtitle: "Owner: %s"
     setpriority: "Set priority to %d"
     list:
       info_0: "Realms (%d / %d)"
